--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "GitHub action to modify slack notification",
   "main": "lib/main.js",
   "scripts": {
-    "build": "eslint src/ && tsc && ncc build",
+    "build": "eslint src/ && tsc && ncc build -o dist/create lib/create.js && ncc build -o dist/update lib/update.js && ncc build -o dist/remove lib/remove.js",
     "watch-build": "nodemon --watch src --ext ts --exec npm run build"
   },
   "devDependencies": {
@@ -19,7 +19,9 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@slack/types": "^2.14.0",
-    "@slack/web-api": "^7.7.0"
+    "@slack/web-api": "^7.7.0",
+    "checkout": "github:pew-actions/checkout#current",
+    "uuid": "^11.0.3"
   },
   "engines": {
     "node": ">= 20"
