--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@slack/types": "^2.14.0",
     "@slack/web-api": "^7.7.0",
     "checkout": "github:pew-actions/checkout#current",
+    "deep-equal": "^2.2.3",
     "uuid": "^11.0.3"
   },
   "engines": {
